--- a/board.html
+++ b/board.html
@@ -129,7 +129,7 @@
         </div>
     </div>
 
-    <div class="add-task-overlay">
+    <div class="add-task-overlay d-none">
         <div class="add-task-overlay-content">
             <div class="addTask-header-and-input">
                 <div class="addTask-header">
