code for custom chekcbox revised and added

--- a/sign_up.html
+++ b/sign_up.html
@@ -30,7 +30,11 @@
                     <input type="password" placeholder="Password" id="password">
                     <input type="password" placeholder="Password" id="password">
                     <div class="sgnp-button-box">
-                        <span class="confirm-priv-polce"><input type="checkbox" class="check-priv-polce">I accept the <link rel="stylesheet" href="#">Privacy policy</span>
+                        <div class="confirm-priv-pol">
+                            <input type="checkbox" class="chb-priv-pol" id="chbPrivPol" >
+                            <label for="chbPrivPol">I agree to the <a href="#" class="priv-polce-link"> Privacy policy</a></label>
+                            
+                        </div>
                         <button class="signup">Sign up</button>
                     </div>
                 </form>
