--- a/contacts.html
+++ b/contacts.html
@@ -37,8 +37,9 @@
                 <a href="./board.html"><button class="nav_btn nav_board"><span><img src="./assets/img/navBar/board.svg"
                                 alt="">Board</span></button></a>
 
-                <a class="active" href="./contacts.html"><button class="nav_btn nav_contacts active" disabled="true"><span><img
-                                src="./assets/img/navBar/contacts.svg" alt="">Contacts</span></button></a>
+                <a class="active" href="./contacts.html"><button class="nav_btn nav_contacts active"
+                        disabled="true"><span><img src="./assets/img/navBar/contacts.svg"
+                                alt="">Contacts</span></button></a>
 
             </section>
 
@@ -60,8 +61,8 @@
 
             <div class="header">
                 <p>Kanban Project Management Tool</p>
-                <div class="header_btn_and_pic"> <a class="question-mark" href="./hilfe.html"><img class="question-mark-img"
-                    src="./assets/img/navBar/help.png" alt=""></a>
+                <div class="header_btn_and_pic"> <a class="question-mark" href="./hilfe.html"><img
+                            class="question-mark-img" src="./assets/img/navBar/help.png" alt=""></a>
                     <div><img class="profile_picture" src="./assets/img/dog-705820_640.jpg" alt="">
                     </div>
                 </div>
