deleted the sort function for the assign to field

--- a/add_task.html
+++ b/add_task.html
@@ -61,8 +61,8 @@
 
             <div class="header">
                 <p>Kanban Project Management Tool</p>
-                <div class="header_btn_and_pic"> <a class="question-mark" href="./hilfe.html"><img class="question-mark-img"
-                    src="./assets/img/navBar/help.png" alt=""></a>
+                <div class="header_btn_and_pic"> <a class="question-mark" href="./hilfe.html"><img
+                            class="question-mark-img" src="./assets/img/navBar/help.png" alt=""></a>
                     <div><img class="profile_picture" src="./assets/img/dog-705820_640.jpg" alt="">
                     </div>
                 </div>
@@ -102,6 +102,7 @@
                                 <img id="input-icon-assign-to" src="./assets/svg/addTasksSvg/arrow_drop_down.svg"
                                     alt="Icon" class="input-icon">
                                 <div class="dropdown-content" id="dropdown-content">
+
                                     <div onclick="checkIt(0)" class="dropdown-item">
                                         <div class="addTask-profilepicture">VV</div>
                                         <label class="custom-checkbox">
