hard assigned-to-field fixes

--- a/add_task.html
+++ b/add_task.html
@@ -102,29 +102,25 @@
                                 <img id="input-icon-assign-to" src="./assets/svg/addTasksSvg/arrow_drop_down.svg"
                                     alt="Icon" class="input-icon">
                                 <div class="dropdown-content" id="dropdown-content">
-
-                                    <div onclick="checkIt(0)" class="dropdown-item">
+                                    <div onclick="checkIt('Viktor Vaal')" class="dropdown-item">
                                         <div class="addTask-profilepicture">VV</div>
                                         <label class="custom-checkbox">
                                             <p>Viktor Vaal</p>
                                             <img class="cstm-checkbox" src="./assets/svg/addTasksSvg/Checkbutton.svg"
                                                 alt="">
-
                                         </label>
                                     </div>
-                                    <div onclick="checkIt(1)" class="dropdown-item">
+                                    <div onclick="checkIt('Jannik Hoff')" class="dropdown-item">
                                         <div class="addTask-profilepicture">JH</div>
                                         <label class="custom-checkbox">
-
                                             <p>Jannik Hoff</p>
                                             <img class="cstm-checkbox" src="./assets/svg/addTasksSvg/Checkbutton.svg"
                                                 alt="">
                                         </label>
                                     </div>
-                                    <div onclick="checkIt(2)" class="dropdown-item">
+                                    <div onclick="checkIt('Dany Hudson')" class="dropdown-item">
                                         <div class="addTask-profilepicture">DH</div>
                                         <label class="custom-checkbox">
-
                                             <p>Dany Hudson</p>
                                             <img class="cstm-checkbox" src="./assets/svg/addTasksSvg/Checkbutton.svg"
                                                 alt="">
