--- a/board.html
+++ b/board.html
@@ -200,6 +200,7 @@
 
                     </div>
 
+                    <div class="add-task-vl"></div>
 
                     <div class="addTask-right">
 
