changing handling of animated img for media query

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <div class="login-content-box" id="loginContentBox">
         <div class="nau-sign-up-box">
-            <div class="nau-sign-up"><span class="text-nau" >Not a Join user?</span><button class="">Sign Up</button> </div>
+            <div class="nau-sign-up"><span class="text-nau">Not a Join user?</span><button class="">Sign Up</button>
+            </div>
         </div>
         <div class="login-content">
             <div class="login-h1">
@@ -28,7 +29,7 @@
                     </div>
                 </form>
             </div>
-        </div>    
+        </div>
 
         <div class="prvt-polce-legl-note-box">
             <div class="prvt-polce-legl-note">
@@ -37,11 +38,15 @@
             </div>
         </div>
         <div class="p1-logo-box">
-            <div class="p1-logo" id="p1Logo"> <img src="./assets/img/logo_join_pos.svg" alt=""></div>
-        </div>
-        <div class="backdrop" id="backdrop"></div>
-    </div>
+            <div class="p1-logo" id="p1Logo">
+                <img src="./assets/img/logo_join_pos.svg" >
+                <!-- <img src="./assets/img/Logo.png" class="logo-resp">-->
 
+            </div>
+        </div>
+        
+    </div>
+<div class="backdrop" id="backdrop"></div>
     <!-- <div class="p1-logo-box">
         <div class="p1-logo" id="p1Logo"> <img src="./assets/img/logo_join_pos.svg"></div>
     </div>
