--- a/board.html
+++ b/board.html
@@ -9,6 +9,7 @@
     <script src="./scripts/script.js"></script>
     <script src="./scripts/AddTaskScripts/add_task.js"></script>
     <script src="./scripts/AddTaskScripts/addTaskContactsList.js"></script>
+    <link rel="icon" type="image/x-icon" href="./assets/icons/Favicon.png">
     <title>Join</title>
     <link rel="stylesheet" href="./styles/navBar.css">
     <link rel="stylesheet" href="./styles/standard.css">
