prevent reload when signed up

--- a/sign_up.html
+++ b/sign_up.html
@@ -37,7 +37,7 @@
                                     policy</a></label>
 
                         </div>
-                        <button class="signup" onclick="showSignUpMsg()">Sign up</button>
+                        <button class="signup" onclick="showSignUpMsg(); return false">Sign up</button>
                         <div class="signup-msg  d-none" id="signUpMsg">You have successesfully signed up</div>
                     </div>
                 </form>
