--- a/board.html
+++ b/board.html
@@ -24,7 +24,7 @@
         rel="stylesheet">
 </head>
 
-<body onload="updateHTML(); addTaskInit()">
+<body onload="updateHTML(); addTaskInit(); registerUser()">
 
     <div class="content-width">
 
