click notification for contact creation fix

--- a/contacts.html
+++ b/contacts.html
@@ -244,6 +244,12 @@
                         </section>
 
 
+                        <div class="notification-space">
+                            <div class="click-notification">
+                                <p>Contact successfully created</p>
+                            </div>
+                        </div>
+
                     </div>
 
 
